Episode 15. Refactoring part: improved product-api service.
