# product-api/handlers/get.go
@@ -1,10 +1,8 @@
 package handlers
 
 import (
-	"context"
 	"net/http"
 
-	currencypb "github.com/LeeDark/go-microservices-starter/currency/protos/currency"
 	"github.com/LeeDark/go-microservices-starter/product-api/data"
 )
 
@@ -18,15 +16,24 @@ import (
 
 // ListAll handles GET requests and returns all current products
 func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
-	p.l.Println("[DEBUG] get all records")
+	p.l.Debug("Get all records")
 	rw.Header().Add("Content-Type", "application/json")
 
-	prods := data.GetProducts()
+	cur := r.URL.Query().Get("currency")
 
-	err := data.ToJSON(prods, rw)
+	prods, err := p.productsDB.GetProducts(cur)
+	if err != nil {
+		p.l.Error("Fetching products", "error", err)
+
+		rw.WriteHeader(http.StatusInternalServerError)
+		data.ToJSON(&GenericError{Message: err.Error()}, rw)
+		return
+	}
+
+	err = data.ToJSON(prods, rw)
 	if err != nil {
 		// we should never be here but log the error just incase
-		p.l.Println("[ERROR] serializing product", err)
+		p.l.Error("Unable to serialize product", "error", err)
 	}
 }
 
@@ -41,52 +48,32 @@ func (p *Products) ListSingle(rw http.ResponseWriter, r *http.Request) {
 	rw.Header().Add("Content-Type", "application/json")
 
 	id := getProductID(r)
+	cur := r.URL.Query().Get("currency")
 
-	p.l.Println("[DEBUG] get record id", id)
+	p.l.Debug("Get record id", "id", id)
 
-	prod, err := data.GetProductByID(id)
+	prod, err := p.productsDB.GetProductByID(id, cur)
 
 	switch err {
 	case nil:
 
 	case data.ErrProductNotFound:
-		p.l.Println("[ERROR] fetching product", err)
+		p.l.Error("Unable to fetch product", "error", err)
 
 		rw.WriteHeader(http.StatusNotFound)
 		data.ToJSON(&GenericError{Message: err.Error()}, rw)
 		return
 	default:
-		p.l.Println("[ERROR] fetching product", err)
+		p.l.Error("Unable to fetch product", "error", err)
 
 		rw.WriteHeader(http.StatusInternalServerError)
 		data.ToJSON(&GenericError{Message: err.Error()}, rw)
 		return
 	}
 
-	// get exchange rate
-	req := &currencypb.RateRequest{
-		Base:        currencypb.Currencies(currencypb.Currencies_value["EUR"]),
-		Destination: currencypb.Currencies(currencypb.Currencies_value["GBP"]),
-	}
-
-	// execute gRPC call
-	resp, err := p.cc.GetRate(context.Background(), req)
-	if err != nil {
-		p.l.Println("[ERROR] calling currency service", err)
-
-		rw.WriteHeader(http.StatusInternalServerError)
-		data.ToJSON(&GenericError{Message: "error calling currency service"}, rw)
-		return
-	}
-
-	p.l.Println("[DEBUG] exchange rate response", resp.GetRate())
-
-	// EUR to GBP conversion
-	prod.Price = prod.Price * resp.GetRate()
-
 	err = data.ToJSON(prod, rw)
 	if err != nil {
 		// we should never be here but log the error just incase
-		p.l.Println("[ERROR] serializing product", err)
+		p.l.Error("Unable to serialize product", err)
 	}
 }
