# product-api/swagger.yaml
@@ -10,9 +10,9 @@ definitions:
                 type: string
                 x-go-name: Message
         type: object
-        x-go-package: github.com/LeeDark/go-microservices-starter/sdk/models
+        x-go-package: github.com/LeeDark/go-microservices-starter/product-api/sdk/models
     Product:
-        description: Product defines the structure for an API product
+        description: Product Product defines the structure for an API product
         properties:
             description:
                 description: the description for this product
@@ -46,7 +46,7 @@ definitions:
             - price
             - sku
         type: object
-        x-go-package: github.com/LeeDark/go-microservices-starter/data
+        x-go-package: github.com/LeeDark/go-microservices-starter/product-api/sdk/models
     ValidationError:
         description: ValidationError ValidationError is a collection of validation error messages
         properties:
@@ -57,7 +57,7 @@ definitions:
                 type: array
                 x-go-name: Messages
         type: object
-        x-go-package: github.com/LeeDark/go-microservices-starter/sdk/models
+        x-go-package: github.com/LeeDark/go-microservices-starter/product-api/sdk/models
 info:
     description: Documentation for Product API
     title: of Product API
@@ -67,6 +67,13 @@ paths:
         get:
             description: This will show all available products in the system
             operationId: listProducts
+            parameters:
+                - description: |-
+                    Currency used when returning the price of the product,
+                    when not specified currency is returned in GBP.
+                  in: query
+                  name: Currency
+                  type: string
             responses:
                 "200":
                     $ref: '#/responses/productsResponse'
@@ -139,6 +146,12 @@ paths:
             description: Return a list of products from the database
             operationId: listSingleProduct
             parameters:
+                - description: |-
+                    Currency used when returning the price of the product,
+                    when not specified currency is returned in GBP.
+                  in: query
+                  name: Currency
+                  type: string
                 - description: The id of the product for which the operation relates
                   format: int64
                   in: path
